codegen/4.6.0/docs/ViewPolicy.md
# ViewPolicy

## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | **int32** | A uniqe guid given to the view policy | [optional] [default to null]
**Guid** | **string** | A uniqe guid given to the view policy | [optional] [default to null]
**Name** | **string** | A uniqe name given to the view policy.                          | [default to null]
**Created** | [**time.Time**](time.Time.md) |  | [optional] [default to null]
**GidInheritance** | **string** | Determine the way a file inherits GID | [optional] [default to null]
**Flavor** | **string** | Security flavor, which determines how file and directory permissions are applied in multiprotocol views. | [optional] [default to null]
**AccessFlavor** | **string** | Applicable with MIXED_LAST_WINS security flavor (Access can be set via NFSv3 regardless of this option) | [optional] [default to null]
**PathLength** | **string** | How to determine the maximum allowed path length | [optional] [default to null]
**AllowedCharacters** | **string** | How to determine the allowed characters in a path | [optional] [default to null]
**Use32bitFileid** | **bool** |  | [optional] [default to null]
**ExposeIdInFsid** | **bool** |  | [optional] [default to null]
**UseAuthProvider** | **bool** | Use configured Auth Provider(s) to enforce group permissions. Required if SMB Flavor is selected | [optional] [default to null]
**AuthSource** | **string** | The source of authentication | [optional] [default to null]
**ReadWrite** | **[]string** | Hosts with NFS read/write permissions | [optional] [default to null]
**ReadOnly** | **[]string** | Hosts with NFS read only permissions | [optional] [default to null]
**NfsReadWrite** | **[]string** | Hosts with NFS read/write permissions | [optional] [default to null]
**NfsReadOnly** | **[]string** | Hosts with NFS read only permissions | [optional] [default to null]
**SmbReadWrite** | **[]string** | Hosts with SMB read/write permissions | [optional] [default to null]
**SmbReadOnly** | **[]string** | Hosts with SMB read only permissions | [optional] [default to null]
**S3ReadWrite** | **[]string** | Hosts with S3 read/write permissions | [optional] [default to null]
**S3ReadOnly** | **[]string** | Hosts with S3 read only permissions | [optional] [default to null]
**TrashAccess** | **[]string** | Hosts with trash permissions | [optional] [default to null]
**NfsPosixAcl** | **bool** | Enable POSIX ACL | [optional] [default to null]
**NfsReturnOpenPermissions** | **bool** | when using smb use open permissions for files | [optional] [default to null]
**NfsNoSquash** | **[]string** | Hosts with no squash policy | [optional] [default to null]
**NfsRootSquash** | **[]string** | Hosts with root squash policy | [optional] [default to null]
**NfsAllSquash** | **[]string** | Hosts with all squash policy | [optional] [default to null]
**S3BucketFullControl** | **string** | Hosts with full permissions | [optional] [default to null]
**S3BucketListing** | **string** | Hosts with full permissions | [optional] [default to null]
**S3BucketRead** | **string** | Hosts with full permissions | [optional] [default to null]
**S3BucketReadAcp** | **string** | Hosts with full permissions | [optional] [default to null]
**S3BucketWrite** | **string** | Hosts with full permissions | [optional] [default to null]
**S3BucketWriteAcp** | **string** | Hosts with full permissions | [optional] [default to null]
**S3ObjectFullControl** | **string** | Hosts with full permissions | [optional] [default to null]
**S3ObjectRead** | **string** | Hosts with full permissions | [optional] [default to null]
**S3ObjectReadAcp** | **string** | Hosts with full permissions | [optional] [default to null]
**S3ObjectWrite** | **string** | Hosts with full permissions | [optional] [default to null]
**S3ObjectWriteAcp** | **string** | Hosts with full permissions | [optional] [default to null]
**SmbFileMode** | **int32** | Default unix type permissions on new file | [optional] [default to null]
**SmbDirectoryMode** | **int32** | Default unix type permissions on new folder | [optional] [default to null]
**SmbFileModePadded** | **string** | Default unix type permissions on new file | [optional] [default to null]
**SmbDirectoryModePadded** | **string** | Default unix type permissions on new folder | [optional] [default to null]
**Cluster** | **string** | Parent Cluster | [optional] [default to null]
**ClusterId** | **int32** | Parent Cluster ID | [optional] [default to null]
**TenantId** | **int32** | Tenant ID | [optional] [default to null]
**TenantName** | **string** | Tenant Name | [optional] [default to null]
**Url** | **string** |  | [optional] [default to null]
**AtimeFrequency** | **string** | Frequency for updating the atime attribute of NFS files. atime is updated on read operations if the difference between the current time and the file&#x27;s atime value is greater than the atime frequency. Specify as time in seconds. | [optional] [default to null]
**VipPools** | **[]int32** | Comma separated vip pool ids. | [optional] [default to null]
**NfsMinimalProtectionLevel** | **string** | NFS 4.1 minimal protection level | [optional] [default to null]
**S3Visibility** | **[]string** |  | [optional] [default to null]
**S3VisibilityGroups** | **[]string** |  | [optional] [default to null]
**AppleSid** | **bool** | Apple sid | [optional] [default to null]
**ProtocolsAudit** | [***interface{}**](interface{}.md) | Map of protocols audit configurations | [optional] [default to null]
**Protocols** | **[]string** | Protocols to audit | [optional] [default to null]
**DataCreateDelete** | **bool** | Create/Delete Files/Directories/Objects | [optional] [default to null]
**DataModify** | **bool** | Modify data/MD | [optional] [default to null]
**DataRead** | **bool** | Read data | [optional] [default to null]
**LogFullPath** | **bool** | Log full path | [optional] [default to null]
**LogHostname** | **bool** | Log hostname | [optional] [default to null]
**LogUsername** | **bool** | Log username | [optional] [default to null]
**LogDeleted** | **bool** | Log deleted files/dirs from trash dir | [optional] [default to null]
**RemoteMapping** | [***interface{}**](interface{}.md) |  | [optional] [default to null]
**CountViews** | **int32** | Number of Policy related Views | [optional] [default to null]
**EnableSnapshotLookup** | **bool** | Specifies whether to make the .snapshot directory accessible in subdirectories of the View. | [optional] [default to null]
**EnableListingOfSnapshotDir** | **bool** | Specifies whether to make the .snapshot directory visible in subdirectories of the View. | [optional] [default to null]

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

