codegen/5.1.0/docs/ViewPolicy.md
# ViewPolicy

## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | **int32** | The unique ID of the view policy. | [optional] [default to null]
**Guid** | **string** | The unique GUID of the view policy. | [optional] [default to null]
**Name** | **string** | The unique name of the view policy. | [default to null]
**GidInheritance** | **string** | Determines the way a file inherits GID. | [optional] [default to null]
**Flavor** | **string** | Security flavor, which determines how file and directory permissions are applied in multiprotocol views. | [optional] [default to null]
**AccessFlavor** | **string** | Controls which protocols can set file permissions when the security flavor is set to &#x27;MIXED_LAST_WINS&#x27;. Note that with &#x27;MIXED_LAST_WINS&#x27;, NFSv3 access is unaffected by this option. | [optional] [default to null]
**PathLength** | **string** | How to determine the maximum allowed path length. | [optional] [default to null]
**AllowedCharacters** | **string** | How to determine the allowed characters in a path. | [optional] [default to null]
**Use32bitFileid** | **bool** |  | [optional] [default to null]
**ExposeIdInFsid** | **bool** |  | [optional] [default to null]
**UseAuthProvider** | **bool** | Enables or disables use of the configured authentication provider(s) to enforce group permissions. If set to &#x27;true&#x27; without specifing &#x27;auth_source&#x27;, the &#x27;auth_source&#x27; is set to &#x27;PROVIDERS&#x27;. If set to &#x27;false&#x27;, the &#x27;auth_source&#x27; is set to RPC. Due to the nature of Terraform, simply changing &#x27;use_auth_provider&#x27; from &#x27;false&#x27; to &#x27;true&#x27; or the other way around will not change the value of the &#x27;auth_source&#x27; parameter because Terrafrom will keep holding the previous value. Therefore it is advisable to always specify the value of &#x27;auth_source&#x27;. | [optional] [default to false]
**AuthSource** | **string** | The source of authentication. | [optional] [default to null]
**ReadWrite** | **[]string** | Hosts with NFS read/write permissions. | [optional] [default to null]
**ReadOnly** | **[]string** | Hosts with NFS read-only permissions. | [optional] [default to null]
**NfsReadWrite** | **[]string** | Hosts with NFS read/write permissions. When creating a new view policy, if this value is not set, then an empty list is sent to the VAST cluster, resulting in an empty list of addresses. However, during an update, if &#x27;nfs_read_write&#x27; is removed from the resource, nothing is changed to preserve Terraform default behavior in such cases. If you need to change the value to an empty list, specify this parameter and set it to []. | [optional] [default to null]
**NfsReadOnly** | **[]string** | Hosts with NFS read-only permissions. When creating a new view policy, if this value is not set, then an empty list is sent to the VAST cluster, resulting in an empty list of addresses. However, during an update, if &#x27;nfs_read_only&#x27; is removed from the resource, nothing is changed to preserve Terraform default behavior in such cases. If you need to change the value to an empty list, specify this parameter and set it to []. | [optional] [default to null]
**SmbReadWrite** | **[]string** | Hosts with SMB read/write permissions. When creating a new view policy, if this value is not set, then an empty list is sent to the VAST cluster, resulting in an empty list of addresses. However, during an update, if &#x27;smb_read_write&#x27; is removed from the resource, nothing is changed to preserve Terraform default behavior in such cases. If you need to change the value to an empty list, specify this parameter and set it to []. | [optional] [default to null]
**SmbReadOnly** | **[]string** | Hosts with SMB read-only permissions. When creating a new view policy, if this value is not set, then an empty list is sent to the VAST cluster, resulting in an empty list of addresses. However, during an update, if &#x27;smb_read_only&#x27; is removed from the resource, nothing is changed to preserve Terraform default behavior in such cases. If you need to change the value to an empty list, specify this parameter and set it to []. | [optional] [default to null]
**S3ReadWrite** | **[]string** | Hosts with S3 read/write permissions. When creating a new view policy, if this value is not set, then an empty list is sent to the VAST cluster, resulting in an empty list of addresses. However, during an update, if &#x27;s3_read_write&#x27; is removed from the resource, nothing is changed to preserve Terraform default behavior in such cases. If you need to change the value to an empty list, specify this parameter and set it to []. | [optional] [default to null]
**S3ReadOnly** | **[]string** | Hosts with S3 read-only permissions. When creating a new view policy, if this value is not set, then an empty list is sent to the VAST cluster, resulting in an empty list of addresses. However, during an update, if &#x27;s3_read_only&#x27; is removed from the resource, nothing is changed to preserve Terraform default behavior in such cases. If you need to change the value to an empty list, specify this parameter and set it to []. | [optional] [default to null]
**TrashAccess** | **[]string** | Hosts with trash folder permissions. | [optional] [default to null]
**NfsPosixAcl** | **bool** | Enables or disables POSIX ACL. | [optional] [default to null]
**NfsReturnOpenPermissions** | **bool** | When using SMB, enables or disables use of open permissions for files. | [optional] [default to null]
**NfsNoSquash** | **[]string** | Hosts with the no-squash policy. When creating a new view policy, if this value is not set, then an empty list is sent to the VAST cluster, resulting in an empty list of addresses. However, during an update, if &#x27;nfs_no_squash&#x27; is removed from the resource, nothing is changed to preserve Terraform default behavior in such cases. If you need to change the value to an empty list, specify this parameter and set it to []. | [optional] [default to null]
**NfsRootSquash** | **[]string** | Hosts with the root squash policy. When creating a new view policy, if this value is not set, then an empty list is sent to the VAST cluster, resulting in an empty list of addresses. However, during an update, if &#x27;nfs_root_squash&#x27; is removed from the resource, nothing is changed to preserve Terraform default behavior in such cases. If you need to change the value to an empty list, specify this parameter and set it to []. | [optional] [default to null]
**NfsAllSquash** | **[]string** | Hosts with the all-squash policy. When creating a new view policy, if this value is not set, then an empty list is sent to the VAST cluster, resulting in an empty list of addresses. However, during an update, if &#x27;nfs_all_squash&#x27; is removed from the resource, nothing is changed to preserve Terraform default behavior in such cases. If you need to change the value to an empty list, specify this parameter and set it to []. | [optional] [default to null]
**S3BucketFullControl** | **string** | Hosts with full permissions | [optional] [default to null]
**S3BucketListing** | **string** | Hosts with full permissions | [optional] [default to null]
**S3BucketRead** | **string** | Hosts with full permissions | [optional] [default to null]
**S3BucketReadAcp** | **string** | Hosts with full permissions | [optional] [default to null]
**S3BucketWrite** | **string** | Hosts with full permissions | [optional] [default to null]
**S3BucketWriteAcp** | **string** | Hosts with full permissions | [optional] [default to null]
**S3ObjectFullControl** | **string** | Hosts with full permissions | [optional] [default to null]
**S3ObjectRead** | **string** | Hosts with full permissions | [optional] [default to null]
**S3ObjectReadAcp** | **string** | Hosts with full permissions | [optional] [default to null]
**S3ObjectWrite** | **string** | Hosts with full permissions | [optional] [default to null]
**S3ObjectWriteAcp** | **string** | Hosts with full permissions | [optional] [default to null]
**SmbFileMode** | **int32** | Default UNIX-type permissions on a new file. | [optional] [default to null]
**SmbDirectoryMode** | **int32** | Default UNIX-type permissions on a new folder. | [optional] [default to null]
**SmbFileModePadded** | **string** | Default UNIX-type permissions on a new file. | [optional] [default to null]
**SmbDirectoryModePadded** | **string** | Default UNIX-type permissions on a new folder. | [optional] [default to null]
**Cluster** | **string** | Parent cluster. | [optional] [default to null]
**ClusterId** | **int32** | Parent cluster ID. | [optional] [default to null]
**TenantId** | **int32** | Tenant ID. | [optional] [default to null]
**TenantName** | **string** | Tenant name. | [optional] [default to null]
**Url** | **string** |  | [optional] [default to null]
**AtimeFrequency** | **string** | Frequency for updating the atime attribute of NFS files. atime is updated on read operations if the difference between the current time and the file&#x27;s atime value is greater than the atime frequency. Specify as time in seconds. | [optional] [default to null]
**VipPools** | **[]int32** | A comma-separated list of virtual IP pool IDs. This attribute conflicts with &#x27;vippool_permissions&#x27; and cannot be supplied together with it. Also, due to the lack of ability to configure virtual IP pool permissions using this attibute, the pool permissions are always defined as read/write. | [optional] [default to null]
**NfsMinimalProtectionLevel** | **string** | NFSv4.1 minimal protection level. | [optional] [default to null]
**S3Visibility** | **[]string** | A list of usernames for bucket listing permissions. | [optional] [default to null]
**S3VisibilityGroups** | **[]string** | A list of group names for bucket listing permissions. | [optional] [default to null]
**AppleSid** | **bool** | Enables or disables returning Security IDs (SIDs) in Apple compatible representation. | [optional] [default to null]
**Protocols** | **[]string** | Protocols to audit. | [optional] [default to null]
**DataCreateDelete** | **bool** | If &#x27;true&#x27;, logs operations that create or delete files, directories, or objects. | [optional] [default to null]
**DataModify** | **bool** | If &#x27;true&#x27;, logs operations that modify data or metadata. | [optional] [default to null]
**DataRead** | **bool** | If &#x27;true&#x27;, logs operations that read data or metadata. | [optional] [default to null]
**LogFullPath** | **bool** | Enables or disables logging of full Element Store path to the requested resource. | [optional] [default to null]
**LogHostname** | **bool** | Enables or disables logging of the accessing host name. | [optional] [default to null]
**LogUsername** | **bool** | Enables or disables logging of username of the requesting user. Disabled by default. | [optional] [default to null]
**LogDeleted** | **bool** | Enables or disables logging of deleted files and directories from the trash folder. | [optional] [default to null]
**RemoteMapping** | [***interface{}**](interface{}.md) |  | [optional] [default to null]
**CountViews** | **int32** | The total number of views associated with this view policy. | [optional] [default to null]
**EnableSnapshotLookup** | **bool** | Specifies whether to make the .snapshot directory accessible in subdirectories of the view. | [optional] [default to null]
**EnableListingOfSnapshotDir** | **bool** | Specifies whether to make the .snapshot directory visible in subdirectories of the view. | [optional] [default to null]
**S3SpecialCharsSupport** | **bool** | Allows or prohibits object names that contain “//“ or “/../“ and are incompatible with other protocols. | [optional] [default to null]
**SmbIsCa** | **bool** | If &#x27;true&#x27;, the SMB share exposed by the view is set as continuously available, which allows SMBv3 clients to request use of persistent file handles and keep their connections to this share in case of a failover event. | [optional] [default to null]
**NfsCaseInsensitive** | **bool** | If &#x27;true&#x27;, forces case insensitivity for NFSv3 and NFSv4. | [optional] [default to null]
**EnableAccessToSnapshotDirInSubdirs** | **bool** | Specifies whether to make the .snapshot directory visible in subdirectories of the view. | [optional] [default to null]
**EnableVisibilityOfSnapshotDir** | **bool** | Specifies whether to make the .snapshot directory visible in subdirectories of the view. | [optional] [default to null]
**NfsEnforceTls** | **bool** | If &#x27;true&#x27;, NFSv3 and NFSv4.1 client mounts are accepted only if they are TLS-encrypted. Use only with &#x27;nfs_minimal_protection_level&#x27; set to &#x27;System&#x27; or &#x27;None&#x27;. | [optional] [default to null]
**ProtocolsAudit** | [***ProtocolsAudit**](ProtocolsAudit.md) |  | [optional] [default to null]
**VippoolPermissions** | [**[]PermissionsPerVipPool**](PermissionsPerVipPool.md) | A list of virtual IP pool permissions. This attribute conflicts with &#x27;vip_pools&#x27; and cannot be supplied together with it. | [optional] [default to null]

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

